test/scc/pp/errors/038.t
#define A
#ifdef A
1